# Phone-Directory

./: 1  1!  AUTHORS  Contact.cpp  Contact.h  Contacts.txt  Core.cpp  Core.h  Makefile  Makefile.am  Parser.cpp  Parser.h  README.md  Verifier.cpp  Verifier.h  a.out  configure.ac  core.h  list.cpp  list.h  main.cpp  trie.cpp  trie.h
contacts/: Contact.h
data/: Contacts.txt
list/: list.h
src/: globals.h
src/contact/: Contact.cpp  Contact.h
src/core/: Core.cpp  Core.h
src/list/: List.cpp  List.h
src/log/: Logger.cpp  Logger.h
src/misc/: trie.cpp  trie.h
src/parser/: Parser.cpp  Parser.h
src/verifier/: Verifier.cpp  Verifier.h
verifier/: Verifier.cpp  Verifier.h
